# networks_modeling

./: README.md  pyproject.toml
src/: data_preparation.py  data_understanding.py  error_evaluation.py  exploratory_analysis.py  helpers.py  modeling.py
